--- a/addons/we7_car/template/web/services_post.html
+++ b/addons/we7_car/template/web/services_post.html
@@ -47,6 +47,12 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="col-xs-12 col-sm-3 col-md-2 control-label">施工耗时(分钟)</label>
+                    <div class="col-sm-9 col-xs-12">
+                        <input type="text" name="user_time" class="form-control"  placeholder="保养完成标准耗时" value="{$theone['user_time']}" />
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="col-xs-12 col-sm-3 col-md-2 control-label">服务简介</label>
                     <div class="col-sm-9 col-xs-12">
                         <textarea name="description" class="form-control" cols="70" style="height:80px">{$theone['description']}</textarea>
