--- a/addons/we7_car/template/web/goods_list.html
+++ b/addons/we7_car/template/web/goods_list.html
@@ -1,12 +1,48 @@
 {template 'common/header'}
+<script>
+    function find(){
+        var key_word = $("#key_word").val().trim();
+        var type_id = $("#type_id").val();
+        location.href="index.php?c=site&a=entry&op=list&do=goods&m=we7_car&key_word="+key_word+"&type_id="+type_id;
+    }
+</script>
 <ul class="nav nav-tabs">
     <li><a href="{php echo $this->createWebUrl('goods',array('op'=>'post'));}">添加产品</a></li>
     <li  class="active"><a href="{php echo $this->createWebUrl('goods', array('op'=>'list'))}">产品管理</a></li>
     <li  ><a href="{php echo $this->createWebUrl('goods', array('op'=>'goods_type'))}">产品类型管理</a></li>
 </ul>
-
 <div class="main panel panel-default">
     <div class="category panel-body table-responsive">
+        <div class="panel panel-info">
+            <div class="panel-heading">查询</div>
+            <div class="panel-body">
+                <div class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label class="col-xs-12 col-sm-2 col-md-2 col-lg-1 control-label">产品名称</label>
+                        <div class="col-sm-8 col-lg-9">
+                            <input type="text" class="form-control" id="key_word" value="{$key_word}" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-12 col-sm-2 col-md-2 col-lg-1 control-label">产品类型</label>
+                        <div class="col-sm-8 col-lg-9">
+                            <select class="form-control" id="type_id">
+                                <option value="0" >全部</option>
+                                {loop $types $type}
+                                <option value="{$type['id']}" {if $type['id']==$type_id }selected='selected'{/if}>
+                                    {$type['name']}
+                                </option>
+                                {/loop}
+                            </select>
+                        </div>
+                        <div class=" col-xs-12 col-sm-2 col-lg-2">
+                            <button class="btn btn-default" onclick="find();"><i class="fa fa-search"></i> 搜索</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <form action="" method="post">
         <table class="table table-hover">
             <thead>
             <tr>
@@ -23,26 +59,32 @@
             <tbody>
             {loop $list $v}
             <tr>
-                <td><input type="text" class="form-control" name="listorder" value="{$v['listorder']}"></td>
-                <td>{$v['name']}</td>
                 <td>
-                    {$v['system_name']}
+                    <input type="text" class="form-control" name="listorder[{$v['system_id']}]" value="{$v['listorder']}">
                 </td>
                 <td>
-                    {if $v['spacing_km'] > 0 }
-                    {$v['spacing_km']}km/{$v['spacing_day']}天
-                    {else}
-                    无
-                    {/if}
+                    <img src="../attachment/{$v['image']}" style="width:100%;" />
+                </td>
+                <td>
+                    {$v['name']}
+                </td>
+                <td>
+                    {$v['type_name']}
+                </td>
+                <td>
+                    {$v['spec']}
+                </td>
+                <td>
+                    ￥{$v['price']}
                 </td>
                 <td>{if $v['status']=='1'}<span class="label label-success">显示</span>{else}<span class="label label-danger">不显示</span>{/if}</td>
-                <td><a href="{php echo $this->createWebUrl('services',array('id' => $v['id'],'op'=>'post'))}" title="编辑" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
-                    <a href="{php echo $this->createWebUrl('services',array('id' => $v['id'],'op'=>'del'))}" onclick="return confirm('确认删除此服务？');
+                <td><a href="{php echo $this->createWebUrl('goods',array('id' => $v['id'],'op'=>'post'))}" title="编辑" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
+                    <a href="{php echo $this->createWebUrl('goods',array('id' => $v['id'],'op'=>'del'))}" onclick="return confirm('确认删除此产品？');
                                                         return false;" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm" title="删除"><i class="fa fa-times"></i></a></td>
             </tr>
             {/loop}
             <tr>
-                <td colspan="6">
+                <td colspan="8">
                     <a class='btn btn-default' href="{php echo $this->createWebUrl('goods', array('op'=>'post','id'=>0));}"><i class="fa fa-arrows"></i> 添加产品</a>
                     <button type="submit" class="btn btn-primary" name="submit" value="提交">提交排序</button>
                     <input type="hidden" name="token" value="{$_W['token']}" />
@@ -50,6 +92,7 @@
             </tr>
             </tbody>
         </table>
+        </form>
     </div>
 </div>
 <script>
