--- a/addons/we7_car/template/web/goods_type.html
+++ b/addons/we7_car/template/web/goods_type.html
@@ -11,7 +11,6 @@
         <table class="table table-hover">
             <thead>
             <tr>
-                <th>序号</th>
                 <th >显示顺序</th>
                 <th >名称</th>
                 <th >上级分类</th>
@@ -22,11 +21,10 @@
             <tbody>
             {loop $list $v}
             <tr>
-                <td>{$v['id']}</td>
                 <td><input type="text" class="form-control" name="listorder[{$v['id']}]" value="{$v['listorder']}"></td>
                 <td>{$v['name']}</td>
                 <td>
-                    {$v['top_id']}
+                    {$v['top_name']}
                 </td>
                 <td>{if $v['status']=='1'}<span class="label label-success">显示</span>{else}<span class="label label-danger">不显示</span>{/if}</td>
                 <td>
@@ -35,7 +33,7 @@
             </tr>
             {/loop}
             <tr>
-                <td colspan="6">
+                <td colspan="5">
 
                     <button type="submit" class="btn btn-primary" name="submit" value="提交">提交排序</button>
                     <input type="hidden" name="token" value="{$_W['token']}" />
@@ -73,7 +71,7 @@
         </div>
     </div>
     <div class="row" style="padding-top: 10px;padding-bottom: 20px;padding-left: 20px;">
-        <button type="button" class="btn btn-primary" name="submit" value="提交" onclick="add_goods_type();">提交</button>
+        <button type="button" class="btn btn-primary" name="submit" value="添加" onclick="add_goods_type();">提交</button>
     </div>
 </div>
 <script>
