--- a/addons/we7_car/template/web/goods_type.html
+++ b/addons/we7_car/template/web/goods_type.html
@@ -3,6 +3,7 @@
     <li><a href="{php echo $this->createWebUrl('goods',array('op'=>'post'));}">添加产品</a></li>
     <li  ><a href="{php echo $this->createWebUrl('goods', array('op'=>'list'))}">产品管理</a></li>
     <li  class="active"><a href="{php echo $this->createWebUrl('goods', array('op'=>'goods_type'))}">产品类型管理</a></li>
+    <li  ><a href="{php echo $this->createWebUrl('goods', array('op'=>'goods_brand'))}">产品品牌管理</a></li>
 </ul>
 
 <div class="main panel panel-default">
