--- a/addons/we7_car/template/web/order_list.html
+++ b/addons/we7_car/template/web/order_list.html
@@ -9,11 +9,12 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th >订单编号</th>
+                    <th style="width: 128px;" >订单编号</th>
                     <th >车牌号码</th>
                     <th >应用服务</th>
                     <th >店铺</th>
-                    <th >施工耗时</th>
+                    <th >耗时</th>
+                    <th >工费</th>
                     <th >订单状态</th>
                     <th >操作</th>
                 </tr>
@@ -21,33 +22,54 @@
                 <tbody>
                 {loop $list $v}
                 <tr>
-                    <td>{$v['name']}</td>
                     <td>
-                        {$v['system_name']}
+                        <a href="{php echo $this->createWebUrl('orders',array('id' => $v['id'],'op'=>'order_detail'))}" />
+                        {$v['order_sn']}
+                        </a>
                     </td>
                     <td>
-                        {if $v['spacing_km'] > 0 }
-                        {$v['spacing_km']}km/{$v['spacing_day']}天
-                        {else}
-                        无
+                        {$v['car_no']}
+                    </td>
+                    <td>
+                        {$v['service_name']}
+                    </td>
+                    <td>
+                        {$v['store_name']}
+                    </td>
+                    <td>
+
+                    </td>
+                    <td>
+
+                    </td>
+                    <td>
+                        {if $v['status'] == 0}
+                        <span style="color:red;">已取消</span>
+                        {else if $v['status'] == 10 }
+                        待开工
+                        {else if $v['status'] == 11 }
+                        待验收
+                        {else if $v['status'] == 20}
+                        待付款
+                        {else if $v['status'] == 30}
+                        待交车
+                        {else if $v['status'] == 40}
+                        已完成
                         {/if}
                     </td>
-                    <td>
-                        {$v['user_time']}分钟
-                    </td>
-                    <td>{if $v['status']=='1'}<span class="label label-success">显示</span>{else}<span class="label label-danger">不显示</span>{/if}</td>
                     <td><a href="{php echo $this->createWebUrl('services',array('id' => $v['id'],'op'=>'post'))}" title="编辑" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
-                        <a href="{php echo $this->createWebUrl('services',array('id' => $v['id'],'op'=>'del'))}" onclick="return confirm('确认删除此服务？');
+                        <a href="{php echo $this->createWebUrl('orders',array('id' => $v['id'],'op'=>'cancle'))}" onclick="return confirm('确认取消此订单？');
                                                         return false;" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm" title="删除"><i class="fa fa-times"></i></a></td>
                 </tr>
                 {/loop}
                 <tr>
-                    <td colspan="6">
+                    <td colspan="8">
                         <a class='btn btn-default' href="{php echo $this->createWebUrl('orders  ', array('op'=>'post','id'=>0));}"><i class="fa fa-arrows"></i> 添加订单</a>
                     </td>
                 </tr>
                 </tbody>
             </table>
+        {$pager}
     </div>
 </div>
 <script>
