--- a/addons/we7_car/template/web/order_post.html
+++ b/addons/we7_car/template/web/order_post.html
@@ -58,15 +58,14 @@
     }
 </script>
 <ul class="nav nav-tabs">
-    <li {if !$id} class="active" {/if}><a href="{php echo $this->createWebUrl('services',array('op'=>'post'));}">添加服务类型</a></li>
-    <li><a href="{php echo $this->createWebUrl('services', array('op'=>'list'))}">服务类型管理</a></li>
-    {if $id}<li class="active"><a href="{php echo $this->createWebUrl('services',array('op'=>'post'));}">编辑服务类型</a></li> {/if}
+    <li class="active"><a href="{php echo $this->createWebUrl('orders',array('op'=>'post'));}">添加订单</a></li>
+    <li ><a href="{php echo $this->createWebUrl('orders', array('op'=>'list'))}">订单管理</a></li>
 </ul>
 <div class="main">
     <form action="" method="post" class="form-horizontal form" enctype="multipart/form-data">
         <div class="panel panel-default">
             <div class="panel-heading">
-                修改品牌车系设置
+                添加订单
             </div>
             <div class="panel-body">
                 <div class="form-group">
@@ -133,9 +132,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-xs-12 col-sm-3 col-md-2 control-label">保养里程</label>
+                    <label class="col-xs-12 col-sm-3 col-md-2 control-label">保养里程(km)</label>
                     <div class="col-sm-9 col-xs-12">
-                        <input type="text" name="name" class="form-control" value="{$theone['name']}" />
+                        <input type="text" name="mileage" class="form-control" value="{$theone['name']}" />
                     </div>
                 </div>
 
@@ -157,15 +156,14 @@
         });
     }
     $('form').submit(function() {
-        if($.trim($('select[name="system_id"]').val()) == '') {
+        if($.trim($('select[name="service_id"]').val()) == '') {
             message('必须选择所属系统.', '', 'error');
             return false;
         }
-        if($.trim($(':text[name="name"]').val()) == '') {
-            message('必须填写服务名称.', '', 'error');
+        if($.trim($('select[name="car_id"]').val()) == '') {
+            message('请选择客户.', '', 'error');
             return false;
         }
-
         return true;
     });
 
